--- a/product-dev.yml
+++ b/product-dev.yml
@@ -10,10 +10,10 @@ spring:
   jpa:
     show-sql: true
   rabbitmq:
-    username: admin
-    password: 123456
+    username: guest    #admin
+    password: guest   #123456
     host: localhost
     port: 5672
-    virtual-host: config
+    #virtual-host: config
 server:
   port: 8182  
