--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -1,3 +1,12 @@
+spring:
+  application:
+    name: gateway
+  rabbitmq:
+    username: guest    #admin
+    password: guest   #123456
+    host: localhost
+    port: 5672
+
 zuul: #自定义路由路径
   routes:
 #    prod: #可随便填
