--- a/user-dev.yml
+++ b/user-dev.yml
@@ -5,6 +5,9 @@ spring:
     password: 123456
     url: jdbc:mysql://localhost:3306/eureka?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
     driver-class-name: com.mysql.jdbc.Driver
+  redis:
+    host: localhost
+    password: 123456  
   jpa:
     show-sql: true
   rabbitmq:
