--- a/user-dev.yml
+++ b/user-dev.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   redis:
     host: localhost
-    password: 123456  
+    #password: 123456  
   jpa:
     show-sql: true
   rabbitmq:
